# KiwiGame

./: .gitignore  CMakeLists.txt  KiwiGame.sln  README.md  build.bat
1/: 新建 文本文档.txt
ConsoleApplication/: ConsoleApplication.vcxproj
Demo/: CMakeLists.txt  main.cpp
DllKiwiSeed/: Building.h  Consumable.h  DllKiwiSeed.sln  DllKiwiSeed.vcxproj  DllKiwiSeed.vcxproj.filters  Equipment.h  GameManager.h  ProductionResource.h  QuadMap.h  Skill.h  Unit.h
KiwiConfig/: Class1.cs
KiwiCore/: IKiwiCore.h  KiwiCore.cpp  KiwiCore.vcxproj  KiwiCore.vcxproj.filters
KiwiGrpcClient/: Program.cs
KiwiGrpcClient/Properties/: launchSettings.json
KiwiGrpcClient/Protos/: greet.proto
KiwiGrpcClient/Services/: GreeterService.cs
KiwiGrpcServer/: Program.cs
KiwiGrpcServer/Properties/: launchSettings.json
KiwiGrpcServer/Protos/: greet.proto
KiwiGrpcServer/Services/: GreeterService.cs
KiwiTactics/: CMakeLists.txt  Class1.cs  Program.cs  ai_script.py  bindings.cpp  character.h  gpp_build.bat  main.cpp  version.h
KiwiTactics/Attributes/: Attribute.cs  Status.cs
KiwiTactics/Base/: AtomEnum.cs  DynamicEnum.cs  EnumHelper.cs  Numeric.cs  ResourceNumeric.cs  UnitProperty.cs
KiwiTactics/Data/: BuildingData.cs  Database.cs
KiwiTactics/Entity/: Building.cs  Item.cs  Skill.cs  Unit.cs
KiwiTactics/Manager/: CombatManager.cs  GameManager.cs  GlobalResourceManager.cs  UnitManager.cs
KiwiTactics/Player/: Army.cs  PlayerResource.cs
KiwiTactics/QuadMap/: QuadCell.cs  QuadMap.cs
KiwiTactics/Strategy/: Building.cs  Landmark.cs  StrategyMap.cs
KiwiTactics/Unit/: Unit.cs
KiwiTactics/data/: SQLiteManager.cpp  SQLiteManager.h  database.h
KiwiTactics/endian/: archive.cpp  archive.h  endian.cpp  endian.h  endianness_codec.cpp  endianness_codec.h
KiwiTactics/game/: Building.h  Character.h  Formula.h  GameManager.h  Inventory.h  QuadMap.h  RandomSeed.h  Skill.h  Structs.h  Timeline.h  manager.cpp  manager.h
KiwiTactics/include/: Anchor.h  BattleField.h  Buff.h  Building.h  Character.h  CharacterInfo.h  Equipment.h  Formula.h  GameEvent.h  GameManager.h  ModuleManager.h  Property.h  QuadMap.h  Resource.h  SQLiteManager.h  Seed.h  Skill.h  SkillManager.h  Timeline.h
KiwiTactics/src/: Anchor.cpp  BattleField.cpp  Building.cpp  Character.cpp  Formula.cpp  GameManager.cpp  ModuleManager.cpp  QuadMap.cpp  SQLiteManager.cpp  Seed.cpp  Skill.cpp  Timeline.cpp
KiwiTactics/utils/: call_lua.h  call_python.h
KiwiTurnBased/: Class1.cs
database/: data.db
dll/x64/: sqlite3.exp  sqlite3.lib
dll/x86/: sqlite3.exp  sqlite3.lib
legacy/: main.cpp
legacy/include/: Character.h  Skill.h  Structs.h  manager.h
py/: add.lua  ai_script.py  register.lua  register.py
scripts/: register.lua  register.py  skills.py  test.xml
test-lua/: CMakeLists.txt  main.cpp  script.lua
